# A2CUI

./: .gitignore  ARCHITECTURE.md  PUBLICATION.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
a2cui-actions/: README.md  build.gradle.kts  gradle.properties
a2cui-actions/api/: a2cui-actions.klib.api
a2cui-adaptive-cards/: README.md  build.gradle.kts  gradle.properties
a2cui-adaptive-cards/api/: a2cui-adaptive-cards.klib.api
a2cui-agui/: README.md  build.gradle.kts  gradle.properties
a2cui-agui-mock-server/: README.md  build.gradle.kts
a2cui-agui/api/: a2cui-agui.klib.api
a2cui-codegen/: README.md  build.gradle.kts  gradle.properties
a2cui-codegen-annotations/: README.md  build.gradle.kts  gradle.properties
a2cui-codegen/api/: a2cui-codegen.api
a2cui-compose/: README.md  build.gradle.kts  gradle.properties
a2cui-core/: README.md  build.gradle.kts  gradle.properties
a2cui-sample/: README.md  build.gradle.kts
a2cui-sample-android/: README.md  build.gradle.kts  proguard-rules.pro
a2cui-sample-custom-catalog/: README.md  build.gradle.kts
a2cui-sample-ios/: README.md  build.gradle.kts
a2cui-sample-live/: README.md  build.gradle.kts
a2cui-sample-shared/: README.md  build.gradle.kts
a2cui-transport/: README.md  build.gradle.kts  gradle.properties
gradle/: libs.versions.toml
integrations/: README.md
integrations/google-adk/: README.md  agent.py  pyproject.toml  requirements.txt
integrations/pydantic-ai/: README.md  agent.py  pyproject.toml  requirements.txt
(+126 files in other folders)
