[project]
name = "a2cui-pydantic-ai-agent"
version = "0.1.0"
description = "Pydantic AI agent exposing AG-UI SSE with A2UI CUSTOM frames for A2CUI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-ai>=0.0.13",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
